# analise_spotify

./: .gitignore  README.md  main.ipynb  pyproject.toml
